# wordle

./: .dockerignore  .env  .env.sample  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yaml  main.py  pyproject.toml  requirements.txt
client/: Dockerfile  client.py  requirements.txt
client/static/css/: styles.css
client/static/js/: cookie.js  script.js
client/templates/: index.html
server/: .dockerignore  Dockerfile  alembic.ini  config.py  requirements.txt  server.py
server/alembic/: env.py
server/alembic/versions/: 202410091752-fa55b755ccc4_create_tables.py  202410100925-84bac59db6e2_add_vocabulary.py  202410130854-b61312d03418_store_hint_on_gamehistory.py  202410131822-0a54279ceabe_store_word_len_on_game.py
server/alembic/vocab/: words_subset.txt
server/middleware/: custom_logging.py
server/models/: base.py  game.py  game_history.py  migration.py  session.py  user.py  vocab.py
server/src/: game_guess.py  test_game_guess.py
server/views/: game.py
